Fixed things that got broken in merge

--- a/apps/site/web/static/css/_mode-group.scss
+++ b/apps/site/web/static/css/_mode-group.scss
@@ -24,4 +24,5 @@
 
 .mode-group-footer {
   @extend .col-xs-12;
+  margin-bottom: 1rem;
 }
